test-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-demo
  namespace: demo
  labels:
    app.kubernetes.io/name: test-demo
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-demo-active
                port:
                  number: 80
